blackbox/_kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-blackbox
  namespace: devops
  labels:
    name: prometheus-blackbox
spec:
  ports:
  - name: prometheus-blackbox-port
    port: 9115
    protocol: TCP
  type: NodePort # only use this to by-pass ingress
  selector:
    app: prometheus-blackbox
